fixing some css

--- a/requirements/project/static/css/forms.css
+++ b/requirements/project/static/css/forms.css
@@ -22,6 +22,13 @@ body {
   background-color: #f2f2f2;
   width: 100svw;
 }
+
+.header__auth-link {
+    /* scale: 3; */
+    text-decoration: none;
+    color: black;
+    /* color: #00aeff; */
+}
 /*********************************************************/
 /*********************************************************/
 /*********************************************************/
