--- a/requirements/project/static/css/form.css
+++ b/requirements/project/static/css/form.css
@@ -10,6 +10,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&family=Unbounded:wght@200..900&display=swap");
 
 * {
+    /* text-decoration: none; */
     box-sizing: border-box;
     margin: 0;
     padding: 0;
@@ -18,10 +19,20 @@
     text-decoration: none;
 }
 
-a {
+.logout {
+        color: #000000;
+    }
+
+.header__auth-link {
+    scale: 3;
+    text-decoration: none;
+    /* color: #00aeff; */
+}
+
+/* a {
     text-decoration: none;
     color: inherit;
-}
+} */
 
 img {
     vertical-align: middle;
