--- a/requirements/project/templates/update.html
+++ b/requirements/project/templates/update.html
@@ -4,17 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/static/css/form.css">
+    <link rel="stylesheet" href="/static/css/profile.css">
     <link rel="icon" href="/static/svg/favicon.svg" type="image/svg">
     <title>Update</title>
 </head>
 
 <body>
-    <header class="header">
+     <header class="header">
         <div class="header__logo">
             <a href="/" class="header__logo-link">
                 <img src="/static/svg/logo.svg" alt="Logo" class="header__logo-img" />
             </a>
+        </div>
+        <div class="logout">
+            <a href="/logout">Logout</a>
         </div>
     </header>
     {{if .username}}
