delete error on progress

--- a/requirements/project/static/css/forms.css
+++ b/requirements/project/static/css/forms.css
@@ -29,6 +29,14 @@ body {
     color: black;
     /* color: #00aeff; */
 }
+
+/* .user_actions--header {
+  width: 20%;
+} */
+
+.header__auth-links a{
+  margin: 5px;
+}
 /*********************************************************/
 /*********************************************************/
 /*********************************************************/
