--- a/requirements/project/templates/delete.html
+++ b/requirements/project/templates/delete.html
@@ -10,17 +10,16 @@
 </head>
 
 <body>
-    <header class="nav">
-        <div id="project_header">
-            <h1><a href="/">FORUM</a></h1>
+    <header class="header">
+        <div class="header__logo">
+            <a href="/" class="header__logo-link">
+                <img src="/static/svg/logo.svg" alt="Logo" class="header__logo-img" />
+            </a>
         </div>
-        <div class="container">
-            <div class="profile-icon">
-                <a href="/newPost" class="btn-primary"><img src="/static/svg/pencil-line.svg" alt="new post"></a>
-                <a href="/logout"><img src="/static/svg/log-out.svg" alt="logout"></a>
-                <a href="/profile"><img src="/static/svg/circle-user-round.svg" alt="user profile"></a>
-            </div>
+        <div class="logout">
+            <a href="/logout">Logout</a>
         </div>
+    </header>
     </header>
     {{if .Error}}
     <div class="error-container">
@@ -34,7 +33,7 @@
         </form>
     </div>
     <footer>
-        <div class="footer-container">
+        <div class="footer">
             <p>&copy; 2025 FORUM — Built with 💙 by the Forum Team</p>
         </div>
     </footer>
