--- a/requirements/project/static/css/profile.css
+++ b/requirements/project/static/css/profile.css
@@ -474,7 +474,7 @@ header .header__logo {
     width: 50px;
 }
 
-.error-container {
+.error-container{
     padding: 10px;
     border: 1px solid #ffb5b5;
     border-radius: 6px;
@@ -488,15 +488,11 @@ header .header__logo {
     visibility: hidden;
 }
 
-@keyframes fade {
+@keyframes fadeInError {
     0% {
         opacity: 1;
+        visibility: visible;
     }
-
-    75% {
-        opacity: 1;
-    }
-
     100% {
         opacity: 0;
         visibility: hidden;
@@ -574,7 +570,7 @@ input[type="email"]:focus {
 input[type="text"]::placeholder,
 input[type="password"]::placeholder,
 input[type="email"]::placeholder {
-    color: rgba(255, 255, 255, 0.4);
+    color: rgb(64, 64, 64);
 }
 
 /* Submit button */
