--- a/requirements/project/static/css/index.css
+++ b/requirements/project/static/css/index.css
@@ -25,6 +25,7 @@
 a {
   text-decoration: none;
   color: inherit;
+  padding: 10px;
 }
 
 img {
@@ -195,7 +196,8 @@ header .header__logo {
 }
 
 .header__logo-img {
-  scale: 0.8;
+  scale: 1;
+  margin-top: 10px;
 }
 
 .header__profile,
@@ -223,6 +225,7 @@ header .header__logo {
   gap: var(--padding-md);
   justify-content: flex-end;
 }
+
 
 .profile-nav li {
   position: relative;
@@ -480,6 +483,9 @@ main .container {
   align-items: center;
   justify-content: center;
   gap: var(--padding-sm);
+}
+.header__auth-link a {
+  padding: 10px;
 }
 
 /* Responsive CSS */
