--- a/requirements/project/static/css/forms.css
+++ b/requirements/project/static/css/forms.css
@@ -1,11 +1,11 @@
 :root {
-    --main-color: #0f172a;
-    --border-color: #e4e7ea;
-    --icons-color: #748093;
-    --accent-color: #00aeff;
-    --font-heading: "Unbounded", sans-serif;
-    --font-body: "Archivo", sans-serif;
-  }
+  --main-color: #0f172a;
+  --border-color: #e4e7ea;
+  --icons-color: #748093;
+  --accent-color: #00aeff;
+  --font-heading: "Unbounded", sans-serif;
+  --font-body: "Archivo", sans-serif;
+}
 * {
   box-sizing: border-box;
   padding: 0;
@@ -75,10 +75,13 @@ header .header__logo {
   background-color: var(--main-color);
   border-radius: 5px;
 }
-
-
-
-
+.header__auth-link,.mobileHeader__auth-link {
+  padding: 10px 15px;
+  background-color: var(--accent-color);
+  color: white;
+  border-radius: 5px;
+  text-decoration: none;
+}
 /*********************************************************/
 /*********************************************************/
 /*********************************************************/
@@ -253,27 +256,35 @@ footer {
   height: 8svh;
   margin-block: 20px;
 }
-.error-container{
-    padding: 10px;
-    border: 1px solid #ffb5b5;
-    border-radius: 6px;
-    background-color: #ff475660;
-    color: #ffffff !important;
-    font-size: 16px;
-    font-weight: 500; 
-    width: 100%;
-    text-align: center;
-    animation: fadeInError 3s ease-in-out;
-    visibility: hidden;
+.error-container {
+  padding: 10px;
+  border: 1px solid #ffb5b5;
+  border-radius: 6px;
+  background-color: #ff475660;
+  color: #ffffff !important;
+  font-size: 16px;
+  font-weight: 500;
+  width: 100%;
+  text-align: center;
+  animation: fadeInError 3s ease-in-out;
+  visibility: hidden;
 }
 @media (max-width: 768px) {
-  .mobileHeader{
+  .mobileHeader {
     display: flex;
     flex-wrap: wrap;
     padding: 5px 20px;
-    
   }
-  .mobileActions{
+  .container {
+    width: 80svw;
+    margin: auto;
+  }
+  form ,.postForm{
+    width: 80svw;
+    padding: 20px;
+    margin: auto;
+  }
+  .mobileActions {
     margin: auto;
     display: flex;
     flex-direction: row;
@@ -282,7 +293,7 @@ footer {
     width: 80svw;
     margin-bottom: 20px;
   }
-  .header{
+  .header {
     display: none;
   }
   .hero__cta {
@@ -298,17 +309,28 @@ footer {
     font-size: 1rem;
     max-width: 90%;
   }
+  footer{
+    max-width: 80svw;
+  }
   .main-content__posts {
     flex-direction: column;
     align-items: center;
   }
-  .container {
-    width: 100% !important;
-  }
 }
 @media (max-width: 480px) {
-  .header{
+  .header {
     display: none;
+  }
+  .container {
+    width: 80svw;
+    margin: auto;
+  }
+  form ,.postForm{
+    width: 80svw;
+    padding: 20px;
+  }
+  footer{
+    max-width: 80svw;
   }
   .hero__title {
     font-size: 1.8rem;
@@ -322,17 +344,11 @@ footer {
     flex-direction: column;
     align-items: center;
   }
-  .container {
-    width: 100% !important;
-  }
   .readmore#btn2 {
     padding: 8px 20px;
     font-size: 0.9rem;
   }
 }
-
-
-
 
 @keyframes fadeInError {
   0% {
@@ -343,7 +359,7 @@ footer {
     visibility: visible;
     opacity: 1;
   }
-  90%{
+  90% {
     opacity: 1;
   }
   100% {
