--- a/requirements/project/static/css/forms.css
+++ b/requirements/project/static/css/forms.css
@@ -14,12 +14,9 @@
 }
 
 body {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  min-height: 100svh;
-  font-family: sans-serif;
-  background-color: #f2f2f2;
+  font-family: "Inter", sans-serif;
+  line-height: 1.5;
+  background-color: #f1f1f1;
   width: 100svw;
 }
 
