--- a/requirements/project/static/css/post.css
+++ b/requirements/project/static/css/post.css
@@ -14,6 +14,7 @@
   margin: 0;
   padding: 0;
 }
+
 .content span {
   display: inline-block;
   max-width: 100%;
@@ -21,6 +22,7 @@
   word-break: break-word;
   white-space: normal;
 }
+
 a {
   text-decoration: none;
   color: inherit;
@@ -29,7 +31,7 @@ a {
 body {
   font-family: "Inter", sans-serif;
   line-height: 1.5;
-  background-color: #f9f9f9;
+  background-color: #f1f1f1;
   width: 100svw;
 }
 
@@ -182,7 +184,8 @@ main .container {
   gap: 10px;
 }
 
-#likes_dislikes,.comment_likes_dislikes {
+#likes_dislikes,
+.comment_likes_dislikes {
   display: flex;
   flex-direction: row !important;
   align-items: center;
@@ -271,7 +274,7 @@ header .profile-icon img {
     flex-wrap: wrap;
     padding: var(--padding-sm) var(--padding-md);
   }
-  
+
   .mobileActions {
     margin: auto;
     display: flex;
@@ -281,41 +284,41 @@ header .profile-icon img {
     width: 80svw;
     margin-bottom: var(--padding-md);
   }
-  
+
   .header {
     display: none;
   }
-  
+
   .hero {
     padding: var(--padding-md);
   }
-  
+
   .hero__cta {
     flex-direction: column;
     align-items: stretch;
     text-align: center;
   }
-  
+
   .hero__title {
     font-size: 1.8rem;
     max-width: 90%;
   }
-  
+
   .hero__description {
     font-size: 1rem;
     max-width: 90%;
   }
-  
+
   .main-content__posts {
     flex-direction: column;
     align-items: center;
   }
-  
+
   .container {
     width: 100% !important;
     padding: var(--padding-md) !important;
   }
-  
+
   .footer,
   .pagination {
     padding: var(--padding-md);
@@ -326,36 +329,36 @@ header .profile-icon img {
   .header {
     display: none;
   }
-  
+
   .hero {
     padding: var(--padding-md);
   }
-  
+
   .hero__title {
     font-size: 1.8rem;
     max-width: 90%;
   }
-  
+
   .hero__description {
     font-size: 1rem;
     max-width: 90%;
   }
-  
+
   .main-content__posts {
     flex-direction: column;
     align-items: center;
   }
-  
+
   .container {
     width: 100% !important;
     padding: var(--padding-sm) !important;
   }
-  
+
   .readmore#btn2 {
     padding: 8px var(--padding-md);
     font-size: 0.9rem;
   }
-  
+
   .footer,
   .pagination {
     padding: var(--padding-sm) var(--padding-md);
